--- a/Chippu-8u-Debug/Chippu_8u.cbp
+++ b/Chippu-8u-Debug/Chippu_8u.cbp
@@ -5,7 +5,7 @@
 		<Option title="Chippu_8u"/>
 		<Option makefile_is_custom="1"/>
 		<Option compiler="gcc"/>
-		<Option virtualFolders="CMake Files\;CMake Files\lib\;CMake Files\lib\calc\;"/>
+		<Option virtualFolders="CMake Files\;"/>
 		<Build>
 			<Target title="all">
 				<Option working_dir="/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug"/>
@@ -44,10 +44,7 @@
 				<Option type="1"/>
 				<Option compiler="gcc"/>
 				<Compiler>
-					<Add option="-DCALC_LIB_VERSION=3"/>
-					<Add option="-DCALC_LIB_PREPROCESSOR_WORKING=1"/>
 					<Add directory="/home/xelarse/Documents/Repos/Chippu-8u/includes"/>
-					<Add directory="/home/xelarse/Documents/Repos/Chippu-8u/lib/calc/src"/>
 					<Add directory="/usr/include/c++/9"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/c++/9"/>
 					<Add directory="/usr/include/c++/9/backward"/>
@@ -70,10 +67,7 @@
 				<Option type="1"/>
 				<Option compiler="gcc"/>
 				<Compiler>
-					<Add option="-DCALC_LIB_VERSION=3"/>
-					<Add option="-DCALC_LIB_PREPROCESSOR_WORKING=1"/>
 					<Add directory="/home/xelarse/Documents/Repos/Chippu-8u/includes"/>
-					<Add directory="/home/xelarse/Documents/Repos/Chippu-8u/lib/calc/src"/>
 					<Add directory="/usr/include/c++/9"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/c++/9"/>
 					<Add directory="/usr/include/c++/9/backward"/>
@@ -89,76 +83,12 @@
 					<DistClean command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
-			<Target title="calc_lib">
-				<Option output="/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/libcalc_lib.a" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc"/>
-				<Option object_output="./"/>
-				<Option type="2"/>
-				<Option compiler="gcc"/>
-				<Compiler>
-					<Add option="-DCALC_LIB_VERSION=3"/>
-					<Add option="-DCALC_LIB_PREPROCESSOR_WORKING=1"/>
-					<Add directory="/home/xelarse/Documents/Repos/Chippu-8u/includes"/>
-					<Add directory="/home/xelarse/Documents/Repos/Chippu-8u/lib/calc/src"/>
-					<Add directory="/usr/include/c++/9"/>
-					<Add directory="/usr/include/x86_64-linux-gnu/c++/9"/>
-					<Add directory="/usr/include/c++/9/backward"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/9/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
-				</Compiler>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/Makefile&quot;  VERBOSE=1 calc_lib"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="calc_lib/fast">
-				<Option output="/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/libcalc_lib.a" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc"/>
-				<Option object_output="./"/>
-				<Option type="2"/>
-				<Option compiler="gcc"/>
-				<Compiler>
-					<Add option="-DCALC_LIB_VERSION=3"/>
-					<Add option="-DCALC_LIB_PREPROCESSOR_WORKING=1"/>
-					<Add directory="/home/xelarse/Documents/Repos/Chippu-8u/includes"/>
-					<Add directory="/home/xelarse/Documents/Repos/Chippu-8u/lib/calc/src"/>
-					<Add directory="/usr/include/c++/9"/>
-					<Add directory="/usr/include/x86_64-linux-gnu/c++/9"/>
-					<Add directory="/usr/include/c++/9/backward"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/9/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
-				</Compiler>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/Makefile&quot;  VERBOSE=1 calc_lib/fast"/>
-					<CompileFile command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j16 -f &quot;/home/xelarse/Documents/Repos/Chippu-8u/Chippu-8u-Debug/lib/calc/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
 		</Build>
-		<Unit filename="/home/xelarse/Documents/Repos/Chippu-8u/lib/calc/src/calc/calc.cpp">
-			<Option target="calc_lib"/>
-		</Unit>
-		<Unit filename="/home/xelarse/Documents/Repos/Chippu-8u/lib/calc/src/calc/calc.h">
-			<Option target="calc_lib"/>
-		</Unit>
 		<Unit filename="/home/xelarse/Documents/Repos/Chippu-8u/main.cpp">
 			<Option target="Chippu_8u"/>
 		</Unit>
 		<Unit filename="/home/xelarse/Documents/Repos/Chippu-8u/CMakeLists.txt">
 			<Option virtualFolder="CMake Files\"/>
-		</Unit>
-		<Unit filename="/home/xelarse/Documents/Repos/Chippu-8u/lib/CMakeLists.txt">
-			<Option virtualFolder="CMake Files\lib\"/>
-		</Unit>
-		<Unit filename="/home/xelarse/Documents/Repos/Chippu-8u/lib/calc/CMakeLists.txt">
-			<Option virtualFolder="CMake Files\lib\calc\"/>
 		</Unit>
 	</Project>
 </CodeBlocks_project_file>
