--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
 #   Quick CMake thats added as a subdir to the main CMake file
 #   Makes it nice n easy to include all libs
 
-add_subdirectory(calc)
+#add_subdirectory(calc)
